2003-03-25  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/symbols.h,
	  standalone/wxwin/aboutdlg.cpp,
	  standalone/wxwin/configtool.cpp,
	  standalone/wxwin/mainwin.cpp: Use a character string to represent
	the configtool version number.

	* standalone/wxwin/runtestsdlg.cpp: Remove CR characters in test
	output. [ Bugzilla 85163 ]

2003-03-19  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/appsettings.cpp,
	  standalone/wxwin/configtooldoc.cpp,
	  standalone/wxwin/ecpch.h,
	  standalone/wxwin/filename.cpp,
	  standalone/wxwin/configtool.rc,
	  standalone/wxwin/makefile.gnu: Allow configtool to build against
	wxWindows 2.4.0 using Cygwin GCC.

2003-03-18  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/appsettings.cpp,
	  standalone/wxwin/configtool.cpp: Look for a default repository
	at ../../packages relative to the configtool location as a last
	resort.

	* standalone/wxwin/configtool.cpp: Eliminate scroll bar jitter in
	the output pane during eCos builds.

	* standalone/wxwin/configtool.cpp (HasInput),
	  standalone/wxwin/mainwin.cpp,
	  standalone/wxwin/configtool.rc,
	  standalone/wxwin/makefile.gnu: Allow configtool to build and run
	against wxWindows 2.4.0.

2003-03-07  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/appsettings.cpp: Look in the right place for the
	eCos repository location under Linux.

	* standalone/wxwin/admindlg.cpp: Allow addition of EPKs with no
	pkgadd.txt since this file should be optional.

2003-02-25  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/makefile.gnu: No need to specify -L /usr/lib for
	Linux builds.

2003-02-21  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/makefile.gnu: Allow a specific installation of Tcl/Tk
	to be referenced using "make TCLDIR=/path/to/tcl".

2003-02-19  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/platformeditordlg.cpp:
	Fix erroneously disabled OK button and duplicate entries in prefix list.
